Fix outer scrollbar issue

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+html {
+  overflow: hidden;
+}
+
 .wrapper {
   max-width: 1000px;
   margin: 0 auto;
